--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "oz",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "path": "^0.12.7"
   }
 }
