--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "oz",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "serve": "^12.0.0"
